# rag-pipeline

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  main.py  pyproject.toml  render.yaml
.github/workflows/: ci.yml  keepalive.yml
agent/: __init__.py  graph.py  state.py
api/: __init__.py  citations.py  confidence.py  main.py  schemas.py
data/: manifest.json
eval/: METRICS_HISTORY.md  dataset.jsonl  run_eval.py  run_notes_v2_semantic.md  run_notes_v3_prompt.md  run_notes_v4_densek10.md
scripts/: README.md  enrich_eval.py  extract_pages.py  smoke_test.py  verify_eval_tokens.py
src/: config.py  generate.py  ingest.py  pipeline.py  retrieve.py
tests/: conftest.py  test_agent_graph.py  test_api.py  test_citations.py  test_confidence.py  test_schemas.py
