[project]
name = "phase0"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets==5.0.0",
    "fastapi==0.139.0",
    "langchain==1.3.11",
    "langchain-community==0.4.2",
    "langchain-core==1.4.8",
    "langchain-openai==1.3.3",
    "openai==2.44.0",
    "pinecone==9.1.0",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.2",
    "pypdf==6.14.2",
    "python-dotenv==1.2.2",
    "ragas==0.4.3",
    "rank-bm25==0.2.2",
    "tiktoken==0.13.0",
    "uvicorn[standard]==0.49.0",
]
