[project]
name = "phase0"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets==5.0.0",
    "fastapi==0.139.0",
    "langchain==0.3.30",
    "langchain-community==0.3.31",
    "langchain-core==0.3.86",
    "langchain-experimental==0.3.4",
    "langchain-openai==0.3.35",
    "langgraph==1.0.1",
    "openai==2.44.0",
    "pinecone==9.1.0",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.2",
    "pypdf==6.14.2",
    "python-dotenv==1.2.2",
    "ragas==0.4.3",
    "rank-bm25==0.2.2",
    "tiktoken==0.13.0",
    "uvicorn[standard]==0.49.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "api", "agent"]

[dependency-groups]
dev = [
    "httpx==0.28.1",
    "pytest==9.1.1",
]
